# formshift-server

./: .gitignore  AGENTS.md  PICKUP.md  README.md  pyproject.toml  start.bat  start.sh
.github/workflows/: ci.yml
docs/: ROADMAP.md  git-strategy.md  performance-baseline.md  performance-parallel.md
docs/adr/: 0001-record-architecture-decisions.md  0002-http-plus-multiplexed-sse.md  0003-token-auth-on-by-default.md  0004-sessions-and-payload-by-reference.md  0005-graph-data-model.md  0006-recipe-hash-cache-keys.md  0007-jobs-and-sse-events.md  0008-draft-as-client-built-boundary-node.md  0009-fixed-arity-ports.md  0010-parallel-executor.md  0011-color-separation-modules.md  0012-isolated-extension-venvs.md  0013-extensions-api.md  0014-pinned-order-output-groups.md  0015-persistent-extension-workers.md  0016-vector-modules-out-of-core.md  0017-extensions-live-in-own-repos.md  0018-git-url-extension-install.md  0019-auto-scan-extension-source-dir.md  0020-explicit-palette-posterize.md  0021-colormask-grow-trapping.md  0022-colormask-unused-index-empty-mask.md
docs/architecture/: design.md  overview.md  type-registry.md
scripts/: bench_baseline.py  bench_parallel.py
tests/: conftest.py  helpers.py  test_auth.py  test_color_modules.py  test_config.py  test_executor.py  test_extension_conflict_e2e.py  test_extensions.py  test_graph.py  test_jobs_api.py  test_multicolor_e2e.py  test_parallel_executor.py  test_pinned_order.py  test_pipeline_http.py  test_potrace.py  test_raster_modules.py  test_removebg_e2e.py  test_sessions.py  test_smoke.py
(+18 files in other folders)
