[project]
name = "formshift-server"
version = "0.1.0.dev0"
description = "A module execution engine: HTTP API over a DAG of typed processing units with per-node caching, progressive results, and network-transparent execution."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
authors = [{ name = "dyvoid" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
]

[project.scripts]
formshift-server = "formshift_server.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.28",
    "ruff>=0.9",
    "mypy>=1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/formshift_server"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
packages = ["formshift_server"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
